# fleet

./: LICENSE  colors.py  commands.py  flake.nix  fleet.py  output.txt  pyproject.toml  setup.py
.dev_docs/: commands.txt
src/: fleet.py
